# DriftMap

./: .gitignore  Cargo.toml  README.md
.wrangler/cache/: pages.json  wrangler-account.json
data-pipeline/: check_glorys.py  compute_kfields.py  download_cmems.py  glorys_tiles_surface.py  prepare_GLORYS_K.py  process_atlas.py  tile_generator.py  validate_files.py
proteus/: Cargo.toml
proteus/src/: data_loader.rs  diffusion.rs  glorysloader.rs  heatmap.rs  integrators.rs  interpolation.rs  landmask_loader.rs  lib.rs  oil_library.rs  particles.rs  release_manager.rs  simulation.rs  wasm.rs
proteus/src/oil_module/: oil_library.rs
proteus/tests/: test_simulation.rs
web/: app.js  eulerGrid.js  index.html  preloader.js  style.css
